# TimeTracker

./: .gitignore  CLAUDE.md  Ontwikkelstappen.md  README.md  SETUP_INSTRUCTIONS.md  install.sh  pyproject.toml  start.sh  update.sh  window_log_2026-06.txt  window_log_2026-11.txt
activities/: admin.py  aggregator.py  import_ahk_log.py  importer.py  models.py  rule_engine.py  serializers.py  test_aggregator.py  test_importer.py  test_rule_engine.py  tests.py  urls.py  views.py
activities/migrations/: 0001_initial.py  0002_initial.py  0003_alter_windowactivity_options_blocktitlesummary.py  0003_alter_windowactivity_unique_together.py  (+2 more)
backend/: pyproject.toml  pytest.ini
backend/apps/activities/: admin.py  aggregator.py  importer.py  models.py  rule_engine.py  serializers.py  test_aggregator.py  test_importer.py  test_rule_engine.py  tests.py  urls.py  views.py
backend/apps/activities/management/commands/: aggregate_activities.py  apply_rules.py  import_ahk_log.py
backend/apps/activities/migrations/: 0001_initial.py  0002_blockprojecthistory_project_nullable.py  0003_comment_field.py
backend/apps/projects/: models.py  tests.py  urls.py
backend/apps/projects/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/logs/: window_log_2026-06.txt  window_log_2026-11.txt
config/: settings.py  urls.py
docs/: ahk-log-format-v2-importer-update.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
projects/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
(+41 files in other folders)
